Include not realy good slider for menu navigation

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^4.14.1",
     "postcss-loader": "3.0.0",
     "sass-loader": "7.2.0",
+    "swiper": "^6.3.1",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.7",
     "webpack-dev-server": "^3.11.0"
@@ -50,7 +51,5 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "dependencies": {
-    "swiper": "^6.2.0"
-  }
+  "dependencies": {}
 }
